--- a/core/templates/layout-vertical.html
+++ b/core/templates/layout-vertical.html
@@ -22,13 +22,13 @@
           </div>
           <div class="d-flex align-items-center gap-1">
             <!-- Theme Color (Light/Dark) -->
-            <div class="topbar-item">
+            {% comment %} <div class="topbar-item">
               <button type="button" class="topbar-button" id="light-dark-mode">
                 <iconify-icon icon="solar:moon-bold-duotone" class="fs-24 align-middle"></iconify-icon>
               </button>
-            </div>
+            </div> {% endcomment %}
             <!-- Notification -->
-            <div class="dropdown topbar-item">
+            {% comment %} <div class="dropdown topbar-item">
               <button type="button" class="topbar-button position-relative" id="page-header-notifications-dropdown"
                       data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <iconify-icon icon="solar:bell-bing-bold-duotone" class="fs-24 align-middle"></iconify-icon>
@@ -138,21 +138,21 @@
                     class="bx bx-right-arrow-alt ms-1"></i></a>
                 </div>
               </div>
-            </div>
+            </div> {% endcomment %}
             <!-- Theme Setting -->
-            <div class="topbar-item d-none d-md-flex">
+            {% comment %} <div class="topbar-item d-none d-md-flex">
               <button type="button" class="topbar-button" id="theme-settings-btn" data-bs-toggle="offcanvas"
                       data-bs-target="#theme-settings-offcanvas" aria-controls="theme-settings-offcanvas">
                 <iconify-icon icon="solar:settings-bold-duotone" class="fs-24 align-middle"></iconify-icon>
               </button>
-            </div>
+            </div> {% endcomment %}
             <!-- Activity -->
-            <div class="topbar-item d-none d-md-flex">
+            {% comment %} <div class="topbar-item d-none d-md-flex">
               <button type="button" class="topbar-button" id="theme-settings-btn" data-bs-toggle="offcanvas"
                       data-bs-target="#theme-activity-offcanvas" aria-controls="theme-settings-offcanvas">
                 <iconify-icon icon="solar:clock-circle-bold-duotone" class="fs-24 align-middle"></iconify-icon>
               </button>
-            </div>
+            </div> {% endcomment %}
             <!-- User -->
             <div class="dropdown topbar-item">
               <a type="button" class="topbar-button" id="page-header-user-dropdown" data-bs-toggle="dropdown"
@@ -166,7 +166,7 @@
               <div class="dropdown-menu dropdown-menu-end">
                 <!-- item-->
                 <h6 class="dropdown-header">Welcome Gaston!</h6>
-                <a class="dropdown-item" href="{% url 'pages:dynamic_pages' template_name='pages-profile' %}">
+                {% comment %} <a class="dropdown-item" href="{% url 'pages:dynamic_pages' template_name='pages-profile' %}">
                   <i class="bx bx-user-circle text-muted fs-18 align-middle me-1"></i><span
                   class="align-middle">Profile</span>
                 </a>
@@ -186,19 +186,19 @@
                   <i class="bx bx-lock text-muted fs-18 align-middle me-1"></i><span
                   class="align-middle">Lock screen</span>
                 </a>
-                <div class="dropdown-divider my-1"></div>
+                <div class="dropdown-divider my-1"></div> {% endcomment %}
                 <a class="dropdown-item text-danger" href="{% url 'pages:dynamic_pages' template_name='auth-signin' %}">
                   <i class="bx bx-log-out fs-18 align-middle me-1"></i><span class="align-middle">Logout</span>
                 </a>
               </div>
             </div>
             <!-- App Search-->
-            <form class="app-search d-none d-md-block ms-2">
+            {% comment %} <form class="app-search d-none d-md-block ms-2">
               <div class="position-relative">
                 <input type="search" class="form-control" placeholder="Search..." autocomplete="off" value="">
                 <iconify-icon icon="solar:magnifer-linear" class="search-widget-icon"></iconify-icon>
               </div>
-            </form>
+            </form> {% endcomment %}
           </div>
         </div>
       </div>
