--- a/core/templates/partials/main-nav.html
+++ b/core/templates/partials/main-nav.html
@@ -53,6 +53,15 @@
         </div>
       </li> 
 
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'responses:dashboard' %}">
+                         <span class="nav-icon">
+                              <iconify-icon icon="solar:chart-square-bold-duotone"></iconify-icon>
+                         </span>
+          <span class="nav-text"> Análisis </span>
+        </a>
+      </li>
+
       {% comment %} <li class="nav-item">
         <a class="nav-link menu-arrow" href="#sidebarProducts" data-bs-toggle="collapse" role="button"
            aria-expanded="false" aria-controls="sidebarProducts">
