--- a/core/templates/pages/exam-preview.html
+++ b/core/templates/pages/exam-preview.html
@@ -81,7 +81,7 @@
             {% endfor %}
         </div>
 
-        {% if item.correct_criteria or item.partial_criteria or item.incorrect_criteria %}
+        <!-- {% if item.correct_criteria or item.partial_criteria or item.incorrect_criteria %}
         <hr>
         <h6 class="text-muted">Criterios de Calificacion:</h6>
         <div class="row">
@@ -119,7 +119,7 @@
             </div>
             {% endif %}
         </div>
-        {% endif %}
+        {% endif %} -->
     </div>
 </div>
 {% empty %}
